--- a/project.css
+++ b/project.css
@@ -3,6 +3,12 @@ body{
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border:5px solid blueviolet;
+}
 ul{
     display: flex;
     justify-content: space-around;
@@ -13,25 +19,13 @@ ul{
 a{
     color: azure;
     text-decoration: none;
-}
-img {
-    width: 150px;
-    height: 150px;
-    border-radius:50%;
-    border:5px solid blueviolet;
+}   
+h1{
+    text-align: center;
+    color: blueviolet;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: x-large;
 }
 .center{
     text-align: center;
-}
-h1{
-color: blueviolet;
-font-size:x-large;
-font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-h2{
-    font-size:x-large;
-    font-family: Arial, Helvetica, sans-serif;
-}
-h3{
-    font-family: Arial, Helvetica, sans-serif;
-}
+    }
