--- a/contact.css
+++ b/contact.css
@@ -31,3 +31,9 @@ h1{
 h2{
     font-family:Arial, Helvetica, sans-serif
 }
+.container{
+    padding: 0px 50px;
+}
+nav a:hover{
+    color: rgb(95, 90, 99);
+}
