--- a/index.css
+++ b/index.css
@@ -35,3 +35,9 @@ h2{
 h3{
     font-family: Arial, Helvetica, sans-serif;
 }
+.container{
+    padding: 0px 50px;
+}
+nav a:hover{
+    color: rgb(95, 90, 99);
+}
