--- a/project.css
+++ b/project.css
@@ -29,3 +29,9 @@ h1{
 .center{
     text-align: center;
     }
+    .container{
+        padding: 0px 50px;
+    }
+    nav a:hover{
+        color: rgb(95, 90, 99);
+    }
