--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ a{
     color: azure;
     text-decoration: none;
 }
-img {
+header img {
     width: 150px;
     height: 150px;
     border-radius:50%;
@@ -40,4 +40,25 @@ h3{
 }
 nav a:hover{
     color: rgb(95, 90, 99);
+}
+p{
+    text-align:justify;
+}
+footer img{
+    width: 50px;
+    height: 50px;
+}
+footer{
+    display:flex;
+    justify-content: center;
+}
+footer a{
+    margin: 10px;
+    text-align: center;
+}
+footer p{
+    margin-top: 2px;
+}
+footer a:hover{
+    color:blueviolet
 }
