--- a/project.css
+++ b/project.css
@@ -2,8 +2,9 @@ body{
     background-color: black;
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
 }
-img {
+header img {
     width: 150px;
     height: 150px;
     border-radius: 50%;
@@ -22,7 +23,7 @@ a{
 }   
 h1{
     text-align: center;
-    color: blueviolet;
+    color: rgb(112, 65, 156);
     font-family: Arial, Helvetica, sans-serif;
     font-size: x-large;
 }
@@ -34,4 +35,25 @@ h1{
     }
     nav a:hover{
         color: rgb(95, 90, 99);
+    }
+    p{
+        text-align:justify;
+    }
+    footer img{
+        width: 50px;
+        height: 50px;
+    }
+    footer{
+        display:flex;
+        justify-content: center;
+    }
+    footer a{
+        margin: 10px;
+        text-align: center;
+    }
+    footer p{
+        margin-top: 2px;
+    }
+    footer a:hover{
+        color: blueviolet;
     }
