Atualização projeto e contato

--- a/project.css
+++ b/project.css
@@ -2,13 +2,18 @@ body{
     background-color: black;
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 0px;
     
 }
 header img {
+    display: flex;
+    flex-direction: row;
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    border:5px solid blueviolet;
+    border:3px solid blueviolet;
+    align-items: center;
+    justify-content:space-around;
 }
 ul{
     display: flex;
@@ -31,10 +36,14 @@ h1{
     text-align: center;
     }
     .container{
-        padding: 0px 50px;
+    padding: 0px 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content:space-around;
     }
     nav a:hover{
-        color: rgb(95, 90, 99);
+        color: blueviolet;
     }
     p{
         text-align:justify;
@@ -56,4 +65,26 @@ h1{
     }
     footer a:hover{
         color: blueviolet;
+    }
+    header{
+        padding: 10px;
+        text-align:center;
+        display: flex;
+    }
+    .menu{
+        padding: 10px;
+        display: flex;
+        color: black;
+    }
+    .menu a:hover{
+        color: blueviolet;
+    }
+    h3{
+        text-align: center;
+        margin-right: 20px;
+        color: blueviolet;
+    }
+    h4{
+        text-align: left;
+        margin-right: 20px;
     }
