--- a/contact.css
+++ b/contact.css
@@ -3,7 +3,8 @@ body{
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-header img {
+.cabecalho img {
+    display: flex;
     width: 150px;
     height: 150px;
     border-radius: 50%;
@@ -32,10 +33,15 @@ h2{
     font-family:Arial, Helvetica, sans-serif
 }
 .container{
-    padding: 0px 50px;
+    padding: 10px 50px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    row-gap: 10px;
+    gap: 10px 20px;
 }
 nav a:hover{
-    color: rgb(95, 90, 99);
+    color:blueviolet;
 }
 p{
     text-align:justify;
@@ -57,4 +63,8 @@ footer p{
 }
 footer a:hover{
     color: blueviolet;
+}
+.menu{
+    color: black;
+    font-size: larger;
 }
