--- a/contact.css
+++ b/contact.css
@@ -68,3 +68,13 @@ footer a:hover{
     color: black;
     font-size: larger;
 }
+::-webkit-scrollbar{
+    width: 20px;
+}
+::-webkit-scrollbar-track{
+    background-color: blueviolet;
+}
+::-webkit-scrollbar-thumb{
+    background-color: rgb(130, 19, 214);
+    border-radius: 10px;
+}
